# wisper-transcribe

./: .env.example  .gitignore  README.md  deploy.sh  pyproject.toml
app/: __init__.py  main.py
app/api/: auth.py  dependencies.py  routes.py
app/core/: config.py  logging.py
app/models/: schemas.py
app/services/: storage.py  transcriber.py
deploy/: lxc-setup.md  nginx.conf  whisper-transcribe.service
test/: test.py
tests/: test_api.py
