[project]
name = "whisper-transcribe"
version = "0.1.0"
description = "Self-hosted FastAPI transcription service for meeting audio chunks."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "faster-whisper>=1.0.0",
  "pydantic-settings>=2.2.1",
  "python-multipart>=0.0.9",
  "structlog>=24.1.0",
  "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

